# ouroboros

./: .gitignore  .gitmodules  .project  LICENSE  Makefile  Makefile.in  README.md  config.h  configure  configure.ac  example.xml  oruoSchema.xsd  vars.mk
docs/: Doxyfile  configuration.md
lib/: Makefile  Makefile.am  Makefile.in
prototype/: hello.rb  serverconfig.xml
prototype/output/: hello  hello.c
prototype/templates/: root.tpl
prototype/templates/code/: hello.tpl
prototype/templates/website/: page.tpl
prototype/templates_old/code/: hello.tpl
rgen_example/: hello.rb  hello.xml  test.rb
rgen_example/output/: Makefile~  hello  hello.c
rgen_example/templates/: root.tpl
rgen_example/templates/code/: hello.tpl
rgen_example2/: .project  hello.rb  hello.xml
rgen_example2/output/: Makefile  hello  hello.c
src/: Makefile  Makefile.am  Makefile.in  generator.rb  logic_checker.rb  ouroboros_generator  ranges.rb  schema.xsd  server_model.rb  serverconfig.xml  validator.rb
src/data/: JSON.cpp  JSON.h  JSON.hpp  JSON.ipp  Makefile  base.cpp  base.hpp  base.ipp  base_integer.cpp  base_integer.h  base_string.cpp  base_string.h  data_store.hpp  data_store.ipp  misc.cpp  misc.h
src/mongooseExperimentation/: .gitignore  Makefile  REST.c  REST.h  Server  base.cpp  base.hpp  rest.h  server.c  server.cpp  test.html
src/ouroboros/: Makefile.am  callback.hpp  callback.ipp  callback_manager.cpp  callback_manager.h  device_tree.hpp  device_tree.ipp  device_tree.tpp  function_manager.cpp  function_manager.h  main.cpp  ouroboros_server.cpp  ouroboros_server.h  plugin.h  plugin_manager.cpp  plugin_manager.h  rest.cpp  rest.h
src/ouroboros/data/: JSON.cpp  JSON.h  JSON.hpp  Makefile.am  base.cpp  base.hpp  base.ipp  base_boolean.cpp  base_boolean.h  base_enum.cpp  base_enum.h  base_floating.hpp  base_floating.ipp  base_function.cpp  base_function.h  base_number.hpp  base_number.ipp  base_string.cpp  base_string.h  data_store.hpp  data_store.ipp  misc.cpp  misc.h  subject.hpp  subject.ipp
src/ouroboros/plugin/: .gitignore  sample_cpp.cpp
src/prototype2/: .project  generator.rb
src/prototype2/output/: Makefile
src/prototype2/templates/: root.tpl
src/prototype2/templates/code/: server.tpl
src/server/: .gitignore  Makefile  Makefile.am  Makefile.in  README  callback.h  callback.hpp  callback.ipp  callback_manager.cpp  callback_manager.h  data.hpp  device_tree.cpp  device_tree.h  device_tree.hpp  device_tree.ipp  device_tree.tpp  function_manager.cpp  function_manager.h  main.cpp  ouroboros_server.cpp  ouroboros_server.h  ouroboros_server.ipp  plugin.h  plugin_manager.cpp  plugin_manager.h  rest.c  rest.cpp  rest.h  rest.hpp  rest_handlers.cpp  rest_handlers.h  server.cpp
src/server/data/: JSON.cpp  JSON.h  JSON.hpp  Makefile  Makefile.am  Makefile.in  base.cpp  base.hpp  base.ipp  base_boolean.cpp  base_boolean.h  base_enum.cpp  base_enum.h  base_floating.hpp  base_floating.ipp  base_function.cpp  base_function.h  base_integer.cpp  base_integer.h  base_number.hpp  base_number.ipp  base_string.cpp  base_string.h  data_store.hpp  data_store.ipp  misc.cpp  misc.h  observer.h  observer.hpp  subject.hpp  subject.ipp
src/server/plugin/: Makefile  demo.cpp  python.cpp  sample_cpp.cpp  sample_python.py  sample_python_file.cpp  test.cpp  test.h
src/templates/: Makefile  root.tpl
src/templates/code/: booleanField.tpl  config.tpl  device_tree.tpl  enumField.tpl  floatingField.tpl  functionField.tpl  index.tpl  numberField.tpl  server.tpl  signedByteField.tpl  signedIntField.tpl  signedShortField.tpl  stringField.tpl  unsignedByteField.tpl  unsignedIntField.tpl  unsignedShortField.tpl
src/templates/data/: Makefile  base.cpp  base.hpp  base.ipp  data_store.cpp  data_store.hpp  data_store.ipp  faux_dstore.cpp  faux_dstore.hpp  misc.cpp  misc.h
src/templates/website/: page.tpl
src/test/: .gitignore  Makefile  Makefile.am  base_string_test.cpp  data_store_test.cpp  test-base.cpp  test-data_store.cpp  test-rest.cpp  test.cpp
xml/: example.xml  exampleSchema.xsd  schema.xsd  validate_xml.rb
xml/router_example/: example.xml
