AM_CXXFLAGS = -std=c++11
AM_CPPFLAGS = -I$(top_srcdir)/lib/frozen
noinst_LIBRARIES = libdata.a libJSON.a
libdata_a_SOURCES = base.cpp base_integer.cpp base.ipp base_string.h data_store.ipp misc.cpp base.hpp base_integer.h base_string.cpp data_store.hpp misc.h
libJSON_a_SOURCES = JSON.cpp JSON.h JSON.hpp
