AM_CXXFLAGS = -std=c++03
AM_CPPFLAGS = -I$(top_srcdir)/lib/
noinst_LIBRARIES = libdata.a libJSON.a
libdata_a_SOURCES = base.cpp base_number.ipp base.ipp base_string.h data_store.ipp misc.cpp base.hpp base_number.hpp base_string.cpp data_store.hpp misc.h subject.hpp subject.ipp
libJSON_a_SOURCES = JSON.cpp JSON.h JSON.hpp
