AM_CXXFLAGS = -std=c++03
AM_CPPFLAGS = -I$(top_srcdir)/lib/ -I$(top_srcdir)/src/
noinst_LIBRARIES = libdata.a libJSON.a
libdata_a_SOURCES = base.cpp base_number.ipp base.ipp base_string.h data_store.ipp misc.cpp base.hpp base_number.hpp base_string.cpp data_store.hpp misc.h subject.hpp subject.ipp base_boolean.h base_boolean.cpp base_enum.h base_enum.cpp base_function.h base_function.cpp
libJSON_a_SOURCES = JSON.cpp JSON.h JSON.hpp
